--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,6 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.SixForAndroid"
         tools:targetApi="31">
         <activity
             android:name=".MenuActivity"
@@ -23,7 +22,19 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="false">
+        </activity>
+        <activity
+            android:name=".AboutActivity"
+            android:exported="false">
+        </activity>
+        <activity
+            android:name=".HelpActivity"
+            android:exported="false">
+        </activity>
+        <activity
+            android:name=".PlayersActivity"
+            android:exported="false">
         </activity>
     </application>
 
